--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fcc-api-projects-boilerplate",
+	"name": "time-stamp",
 	"version": "0.0.1",
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
@@ -7,8 +7,9 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"body-parser": "^1.18.3",
+		"cors": "^2.8.4",
+		"express": "^4.16.3"
 	},
 	"engines": {
 		"node": "4.4.5"
