--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "time-stamp",
+	"name": "timeStamp",
 	"version": "0.0.1",
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
