Moment added and tested in application

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "timeStamp",
+	"name": "Time Stamp API project by Ian Robinson",
 	"version": "0.0.1",
-	"description": "An FCC Backend Challenge",
+	"description": "An FCC Backend Challenge by Ian Robinson July 2018",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.4",
-		"express": "^4.16.3"
+		"express": "^4.16.3",
+		"moment": "^2.22.2"
 	},
 	"engines": {
 		"node": "4.4.5"
@@ -22,7 +23,8 @@
 		"node",
 		"hyperdev",
 		"express",
-		"freecodecamp"
+		"freecodecamp",
+		"iarobinson"
 	],
 	"license": "MIT"
 }
